@@ -236,6 +236,8 @@ CREATE MEMORY TABLE XAVATEST.PROFILEAPPLICATION(CODE VARCHAR(5) NOT NULL PRIMARY
 CREATE MEMORY TABLE XAVATEST.COLLABORATORPROFILE(COLLABORATOR_CODE VARCHAR(5) NOT NULL,PROFILE_CODE VARCHAR(5) NOT NULL,PROFILE_APPLICATION_CODE VARCHAR(5) NOT NULL,PRIMARY KEY(PROFILE_CODE,PROFILE_APPLICATION_CODE,COLLABORATOR_CODE))
 CREATE MEMORY TABLE XAVATEST.PROFILE(CODE VARCHAR(5) NOT NULL,DESCRIPTION VARCHAR(50),APPLICATION_CODE VARCHAR(5) NOT NULL,PRIMARY KEY(CODE,APPLICATION_CODE),CONSTRAINT FK_SJRT014NBUWELAX37G8O2236I FOREIGN KEY(APPLICATION_CODE) REFERENCES XAVATEST.PROFILEAPPLICATION(CODE))
 CREATE MEMORY TABLE XAVATEST.COLLABORATOR(CODE VARCHAR(5) NOT NULL PRIMARY KEY,NAME VARCHAR(50))
+CREATE MEMORY TABLE XAVATEST.TEAM(ID VARCHAR(32) NOT NULL PRIMARY KEY,NAME VARCHAR(50))
+CREATE MEMORY TABLE XAVATEST.TEAMMEMBER(ID VARCHAR(32) NOT NULL PRIMARY KEY,ROLE VARCHAR(30),PERSON_ID VARCHAR(32),TEAM_ID VARCHAR(32),CONSTRAINT FK_BYPKUMA31CU1U98S2EXBT8GO4 FOREIGN KEY(PERSON_ID) REFERENCES XAVATEST.PERSON(ID),CONSTRAINT FK_DEIU26LD6TXSTF21MKTQM35UG FOREIGN KEY(TEAM_ID) REFERENCES XAVATEST.TEAM(ID))
 SET SCHEMA COMPANYA
 CREATE MEMORY TABLE COMPANYA.ISSUE(ID VARCHAR(5) NOT NULL PRIMARY KEY,DESCRIPTION VARCHAR(255),WORKER_ID INTEGER)
 CREATE MEMORY TABLE COMPANYA.COMMENT(ID INTEGER GENERATED BY DEFAULT AS IDENTITY(START WITH 1) NOT NULL PRIMARY KEY,ISSUE_ID VARCHAR(5),DATE DATE,COMMENT VARCHAR(500),CONSTRAINT FK_COMMENT_ISSUE FOREIGN KEY(ISSUE_ID) REFERENCES COMPANYA.ISSUE(ID))
@@ -1806,6 +1808,7 @@ INSERT INTO TORDER VALUES('ff8080823aff0293013aff1b20300005','2012-11-14 00:00:0
 INSERT INTO TORDER VALUES('ff8080823cafbf50013cafd6df660003','2013-02-06 00:00:00.000000',1,'',2013,1)
 INSERT INTO TORDER VALUES('ff8080824b02687e014b02711d9f0000','2015-01-19 00:00:00.000000',1,'',2015,1)
 INSERT INTO TORDER VALUES('ff8080824b02687e014b027549480002','2015-01-19 00:00:00.000000',2,'',2015,1)
+INSERT INTO TORDER VALUES('ff8080824dae61de014dae637ac20000','2015-06-01 00:00:00.000000',3,'',2015,1)
 INSERT INTO ORDERDETAIL VALUES('40288196231897f3012318985d260002',8,'40288196231897f3012318985c610001',1)
 INSERT INTO ORDERDETAIL VALUES('402881962318c9f6012318cf52d70002',10,'402881962318c9f6012318cf4f490001',1)
 INSERT INTO ORDERDETAIL VALUES('402881962318dbea012318dc7a840002',10,'402881962318dbea012318dc7a040001',1)
@@ -1844,6 +1847,7 @@ INSERT INTO ORDERDETAIL VALUES('ff8080823aff0293013aff1b20380006',10,'ff8080823a
 INSERT INTO ORDERDETAIL VALUES('ff8080823cafbf50013cafd6df6e0004',10,'ff8080823cafbf50013cafd6df660003',1)
 INSERT INTO ORDERDETAIL VALUES('ff8080824b02687e014b0271252d0001',10,'ff8080824b02687e014b02711d9f0000',1)
 INSERT INTO ORDERDETAIL VALUES('ff8080824b02687e014b027549740003',10,'ff8080824b02687e014b027549480002',1)
+INSERT INTO ORDERDETAIL VALUES('ff8080824dae61de014dae637e1d0001',2,'ff8080824dae61de014dae637ac20000',1)
 INSERT INTO COMMUNITY VALUES('ff8080822723b9ad012723ba03f90001','PROGRAMMERS')
 INSERT INTO COMMUNITY_PERSON VALUES('ff8080822723b9ad012723ba03f90001','4028819617a634cc0117a63750af0002')
 INSERT INTO COMMUNITY_PERSON VALUES('ff8080822723b9ad012723ba03f90001','40288196179bab1e01179bacb60a0002')
